<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:colorBackground="@color/green_100">

    <Button
        android:id="@+id/btn_app_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_200"
        android:onClick="onClickText"
        android:text="@string/btn_app_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_app_riddles"
        app:layout_constraintEnd_toStartOf="@+id/btn_app_magicBall"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_app_magicBall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_200"
        android:onClick="onClickMagicBall"
        android:text="@string/btn_app_magicBall"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_app_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_app_text"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_app_riddles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_200"
        android:onClick="onClickRiddles"
        android:text="@string/btn_app_riddles"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_app_calculator"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_app_text" />

    <Button
        android:id="@+id/btn_app_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_200"
        android:onClick="onClickCalculator"
        android:text="@string/btn_app_calculator"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_app_riddles"
        app:layout_constraintTop_toBottomOf="@+id/btn_app_magicBall"
        app:layout_constraintVertical_bias="0.527" />
</androidx.constraintlayout.widget.ConstraintLayout>