<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TextActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.TextActivity">

    <TextView
        android:id="@+id/textInfoIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/text_input_info"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textInput"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textInfoOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/text_output_info"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textBtnFormat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInfoIn"
        app:layout_constraintVertical_bias="0.013" />

    <EditText
        android:id="@+id/textInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/text_input_hide"
        android:inputType="textPersonName"
        android:maxLength="18"
        android:minHeight="48dp"
        android:onClick="onClick"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textOutput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textInfoIn" />

    <TextView
        android:id="@+id/textOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="73dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textBtnFormat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textInfoOut"
        app:layout_constraintTop_toBottomOf="@+id/textInfoIn" />

    <Button
        android:id="@+id/textBtnFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/text_btn"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>