<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.MagicBallActivity">

    <TextView
        android:id="@+id/infoQ_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magicBall_infoQ"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/infoA_TV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/magicQuestonET"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/infoA_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magicBall_infoA"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/magicAnswerTV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoQ_TV" />

    <Button
        android:id="@+id/btnAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/magicBall_btn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/magicAnswerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/infoA_TV"
        app:layout_constraintTop_toBottomOf="@+id/infoQ_TV"
        app:layout_constraintVertical_bias="0.502" />

    <EditText
        android:id="@+id/magicQuestonET"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/magicBall_hintQ"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/magicAnswerTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/infoQ_TV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.491" />

</androidx.constraintlayout.widget.ConstraintLayout>